# KitchenPal

./: .gitignore  README.md  planlaeg.py  pyproject.toml  regnskab_koek2.py  requirements.txt  test_sheet.xlsx  tester.py
.github/workflows/: ci.yml
src/kitchenpal/: __init__.py  a1.py  app.py  config.py  constants.py  runtime_state.py  scheduler.py  sheets_service.py
src/kitchenpal/sheets/: accounts.py  day_to_day.py  feedback.py  models.py  months.py  planning.py  utils.py
src/kitchenpal/ui/: day_to_day.py  errors.py  feedback.py  month_setup.py
tests/: test_additional_sheets_service.py  test_config.py  test_day_to_day.py  test_feedback_service.py  test_integration_adapter.py  test_month_setup.py  test_scheduler.py  test_sheet_layout.py  test_sheets_service.py  test_transfer_purchase_layout.py  test_ui_errors.py
