[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kitchenpal"
version = "0.1.0"
description = "KitchenPal Streamlit app with Google Sheets backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "gspread",
    "oauth2client",
    "pandas",
    "ortools",
]

[project.optional-dependencies]
test = [
    "openpyxl>=3.1",
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
